GRADLE-2587 SonarQube refactoring
Enabled SonarRunner tasks fork mode
Added sonarRunner configuration to configure classpath
Added SonarRunnerRootExtension
Refactored smoke integration test to use a newer version of SonarQube server (4.3.2)